windows cmd script, process images in folder, print time elapsed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 image = "0.24.7"
 ndarray = "0.15.6"
 ort = "1.15.2"
