--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ clap = { version = "4.4.6", features = ["derive"] }
 image = "0.24.7"
 infer = "0.15.0"
 ndarray = "0.15.6"
-ort = "1.15.2"
+ort = { version = "1.16.2", features = ["cuda"] }
+tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
